basic css set up, need to fix wrapping

--- a/assets/main.css
+++ b/assets/main.css
@@ -1,54 +1,74 @@
 body {
-    font-family: 'Comic Sans MS', cursive;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-  }
-  
+  font-family: 'Comic Sans MS', cursive;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+header {
+  flex: 0 80px;
+}
+
+main {
+  flex: 1 calc(100vh - 110px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+footer {
+  flex: 0 30px;
+}
+
+menu {
+  flex: 1;
+  display: flex;
+  flex-direction: row !important;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.navbar-nav {
+  flex-direction: row !important;
+  width: 100%;
+  justify-content: flex-end;
+}
+
+.navbar-brand {
+  padding-left: 0.3em;
+  border-bottom: solid rgb(182, 182, 182) thin;
+}
+
+menu .nav-item {
+  padding: 0 0.3em;
+}
+
+footer a {
+  float: right;
+}
+
+@media (max-height: 600px) {
   header {
-    flex: 0 80px;
+      display: none;
   }
-  
-  main {
-    flex: 1 calc(100vh - 110px);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-  }
-  
   footer {
-    flex: 0 30px;
-  }
-  
-  menu {
-    flex: 1;
-    display: flex;
-    flex-direction: row !important;
-    list-style: none;
-  }
-  
-  .navbar-brand {
-    padding-left: 0.3em;
-    border-bottom: solid rgb(182, 182, 182) thin;
-  }
-  
-  menu .nav-item {
-    padding: 0 0.3em;
-  }
-  
-  footer a {
-    float: right;
-  }
-  
-  @media (max-height: 600px) {
-    header {
       display: none;
-    }
-    footer {
-      display: none;
-    }
-    main {
+  }
+  main {
       flex: 1 100vh;
-    }
   }
+}
+
+@media (max-width: 768px) {
+  menu {
+      flex-direction: column !important;
+      align-items: center;
+  }
+  
+  .navbar-nav {
+      flex-direction: column !important;
+      align-items: center;
+  }
+}
